<resources>
    <string name="app_name">File Manager</string>
    <string name="manage_your_files_in_a_simple_way">Manage your files in a simple way</string>
    <string name="intro_sub_text">You could integrate your local files with the files in cloud storage</string>
    <string name="category">Category</string>
    <string name="txt_docs">Docs</string>
    <string name="txt_images">Images</string>
    <string name="txt_videos">Videos</string>
    <string name="txt_music">Music</string>
    <string name="open_local_video">Open local video</string>
    <string name="open_network_stream">Open network stream</string>

    <string name="permission_info">The Next Player app needs \"%1$s\" permission to access and play media. Without it, media access and playback won\'t work. To use the app fully, grant the permission.</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_request">Permission Request</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="txt_cancel">Cancel</string>

    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
</resources>