<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context=".activities.video.VideosActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shortcut_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:paddingVertical="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_shortcut" />

    <LinearLayout
        android:id="@+id/permission_not_granted_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/space_grotesk_semibold"
            android:text="@string/permission_not_granted"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/permission_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            tools:ignore="SpUsage" />

        <RelativeLayout
            android:id="@+id/button_open_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shortcut_item"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="@dimen/_32sdp"
            android:paddingVertical="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_settings"
                android:textAllCaps="false" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>