<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:background="@drawable/background_search_button"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/button_docs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_all_corners"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:background="@drawable/background_docs_button"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_docs" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/txt_docs"
                android:textColor="#FF111111"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_all_corners"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:background="@drawable/background_images_button"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_images" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/txt_images"
                android:textColor="#FF111111"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_all_corners"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:background="@drawable/background_videos_button"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_videos" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/txt_videos"
                android:textColor="#FF111111"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_all_corners"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:background="@drawable/background_music_button"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_music" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/txt_music"
                android:textColor="#FF111111"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>